--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.js",
+  "bin": "dist/cjs/cli/index.js",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -51,5 +52,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
+  },
+  "dependencies": {
+    "commander": "^10.0.1"
   }
 }
